# ChangeLog for xfce-extra/xfce4-mailwatch
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mailwatch/ChangeLog,v 1.25 2008/12/03 23:49:53 angelos Exp $

  03 Dec 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-mailwatch-1.0.1.ebuild:
  Removed old

  20 Nov 2008; Brent Baude <ranger@gentoo.org> xfce4-mailwatch-1.1.0.ebuild:
  Marking xfce4-mailwatch-1.1.0 ppc64 for bug 245970

  14 Nov 2008; Jeremy Olexa <darkside@gentoo.org>
  +files/xfce4-mailwatch-1.1.0-no-ssl.patch, xfce4-mailwatch-1.1.0.ebuild:
  Fix compilation for USE=-ssl, patch submited by René 'Necoro' Neumann, bug
  #246600

  12 Nov 2008; Jeroen Roovers <jer@gentoo.org> xfce4-mailwatch-1.1.0.ebuild:
  Stable for HPPA (bug #245970).

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org>
  xfce4-mailwatch-1.1.0.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #245970

  08 Nov 2008; nixnut <nixnut@gentoo.org> xfce4-mailwatch-1.1.0.ebuild:
  Stable on ppc wrt bug 245970

  08 Nov 2008; Jeremy Olexa <darkside@gentoo.org>
  xfce4-mailwatch-1.1.0.ebuild:
  amd64 stable, bug 245970

*xfce4-mailwatch-1.1.0 (16 Sep 2008)

  16 Sep 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-mailwatch-1.1.0.ebuild:
  Version bump

  18 May 2007; Raúl Porcel <armin76@gentoo.org>
  xfce4-mailwatch-1.0.1.ebuild:
  alpha stable wrt #178510

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  xfce4-mailwatch-1.0.1.ebuild:
  ia64 stable

  15 Mar 2007; Markus Rothe <corsair@gentoo.org>
  xfce4-mailwatch-1.0.1.ebuild:
  Stable on ppc64; bug #169987

  12 Mar 2007; Bryan Østergaard <kloeri@gentoo.org>
  xfce4-mailwatch-1.0.1.ebuild:
  Add ~alpha + ~ia64 keywords.

  10 Mar 2007; nixnut <nixnut@gentoo.org> xfce4-mailwatch-1.0.1.ebuild:
  Stable on ppc wrt bug 169987

  10 Mar 2007; Peter Weller <welp@gentoo.org> xfce4-mailwatch-1.0.1.ebuild:
  Keyworded ~x86-fbsd

  10 Mar 2007; Peter Weller <welp@gentoo.org> xfce4-mailwatch-1.0.1.ebuild: