@@ -1,7 +1,5 @@
 AUX xfce4-mailwatch-1.1.0-no-ssl.patch 871 RMD160 3a16b342e58199d0edb679c6aac5a3b90aaf8707 SHA1 867b506680afea309b557c501d1e69b5a85b4535 SHA256 b2fecdc516ea592dad0ebe1186083efceff34710c234c130b438386c6779b144
-DIST xfce4-mailwatch-plugin-1.0.1.tar.bz2 646502 RMD160 73e538eed99cd5d04255ff16ffa1bf47c3ab254b SHA1 6444dbbbf86ef7fb492bacfd2a8b292da41568f8 SHA256 71aa6a4d625611fb05324a0a9a1a42f396468211b86d92bfa7b0b2c1bd802ee2
 DIST xfce4-mailwatch-plugin-1.1.0.tar.bz2 662624 RMD160 81586a36f9da3509eb615b7e0ca033ed74812ded SHA1 fdca7a62a694146fc5cbe48dbaf4db4c60da5510 SHA256 ba6fe9fc8d20f317b968369bbc2802c91c4c7838823faee9304767db9f1a3799
-EBUILD xfce4-mailwatch-1.0.1.ebuild 674 RMD160 0e07d138e247bc5105455d3205bb3b55e5acda84 SHA1 d94b803e3fd445b7c975ecee29433937e05eba7b SHA256 5332d39d24a79554be48ac6f6b34e4aebf35d8d54338a9db32fc017232c068b8
-EBUILD xfce4-mailwatch-1.1.0.ebuild 788 RMD160 0b6bea74d0722f60393256b5623057425bc312dd SHA1 570905bf36a61650a46c738c4bae0bfb5248b03c SHA256 423654bd5b2cb8ea910e27cff1fac4ada69fb05c0e389abb67bbaa4754eb7fb0
-MISC ChangeLog 3245 RMD160 26ffaabdc0df7a85e24fbe5410a6f63aaf51ee37 SHA1 d916120c6c876866104eb7bc7111931da408ca3f SHA256 1b5d84c5839decf628615da148cee9296b076506890de33f232a1903ca30201f
+EBUILD xfce4-mailwatch-1.1.0.ebuild 807 RMD160 563d623c9d714893284b2844cc03fa15a985cfbc SHA1 36d05784e154be0925308958362b0b3b0b3556ce SHA256 14b4d873a7158e23f19301885a6f95673653b150e82b0b303c2eba06955c7c47
+MISC ChangeLog 3367 RMD160 3bada5f1439196987564ef9d6834813e32a20bbe SHA1 72d9dd1e85f671e83cb2b4e11ddfa64a831bd1f0 SHA256 315c104e3cee44685c08d8907fd2c9596bc87118923e87e186660d09379093ac
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
